# fsvf-toy

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  data.txt  dm-tree.nix  flake.nix  main.py  my_mnist.py  pyproject.toml  result  shell.nix  tensorflow-datasets.nix  todo.md  wordcount.py
dataset/: mymnist.py  myrlu.py  rlu_common.py
fsvf/: build_tree.py  dataset.py  load.py  main.py  nlp_seq.py  ppo.py  supervised.py
fsvf/dataset/: my_rlu.py  myrlu.py  rlu_common.py
fsvf/ppo/: agent.py  default.yml  env_utils.py  lib.py
fsvf/supervised/: dataset.py  default.yml  generated_dataset.py  input_pipeline.py  lib.py  linear_transformation_dataset.py  models.py  ppo_dataset.py  train.py
lm1b/: config.yml  input_pipeline.py  input_pipeline_test.py  main.py  models.py  temperature_sampler.py  tokenizer.py  train.py  train_test.py
lm1b/configs/: default.py
nixfiles/: clu.nix  dm-tree.nix  dollar-lambda.nix  etils.nix  fetchPypi.nix  flit-core.nix  gast.nix  gym-minigrid.nix  gym-notices.nix  gym.nix  pytypeclass.nix  setuptools-scm.nix  tensorflow-datasets.nix  tensorstore.nix
nlp_seq/: input_pipeline.py  input_pipeline_test.py  train.py
ppo/: __init__.py  agent.py  config.yml  dataset.py  env_utils.py  lib.py  main.py  models.py  play.py  ppo.py  ppo_lib.py  ppo_lib_test.py  ppo_main.py  seed_rl_atari_preprocessing.py  test_episodes.py  transformer.py
ppo/configs/: default.py
ppo/dataset/: dataset.py  main.py
supervised/: train.py
